# home_projects

amazon_statistics/: README.md  amazon_statistics.conf  amazon_statistics.py
autoshutdown/: README.md  autoshutdown.conf  autoshutdown.service  autoshutdown.sh
backup-service/: README.md  backup-cron.sh  backup-gitea.sh  backup-nextcloud.sh  borgbackup.conf  borgbackup.sh  maintain-dokuwiki.sh
backup-service/backup.d/: host_service.conf.tmpl
crack_pwdb/: README.md  crack_pwdbs.sh  make_wordlist.py
diff_monitor/: README.md  diff_monitor.sh
dns-management/get_dns_servers/: .stubby.yml.tmpl  README.md  fritz.conf  get_dns_servers.conf  get_dns_servers.py  get_dot_cert.sh
dns-management/update-dyndns/: README.md  update-dyndns.conf  update-dyndns.py
libmathpp/: .clang-format  .gitignore  CMakeLists.txt  README.md
libmathpp/src/: CMakeLists.txt  main.cpp
libmathpp/src/libmathpp/: CMakeLists.txt  algebra.h  num_theory.cpp
libmathpp/src/libmathpp/types/: Complex.h  Matrix.h  Rational.h
libmathpp/src/mathpp/: CMakeLists.txt  algebra.cpp  num_theory.h
libmathpp/src/mathpp/types/: Matrix.h  Vector.h
libmathpp/tests/: CMakeLists.txt
maintain_snapraid/: README.md  maintain_snapraid.sh
prep_chroot/: README.md  prep_chroot.sh
simple_netcat_boost/: README.md  Reader.cpp  Reader.h  StdInReader.cpp  StdInReader.h  Writer.cpp  Writer.h  main.cpp
smart_check/: README.md  run_tests.sh  smart_check.conf  smart_check.sh
stat_connectivity/: README.md  stat_conn_eval.py  stat_connectivity.sh
